--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "Repositório com códigos de auxílio para o desenvolvimento de uma agenda de cadastro de clientes, em TypeScript. Os códigos são para auxílio da ATVI da disciplina de técnicas de programação I.",
   "main": "out/app/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.7.10",
     "@types/prompt-sync": "^4.1.1",
+    "express": "^4.19.2",
     "prompt-sync": "^4.2.0"
-  }
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
+  },
+  "scripts": {
+    "start": "ts-node src/server.ts"
+}
+
 }
